# event-analytics-hub-ingest

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-test-push.yml  build-test.yml
server/: app.py  gunicorn.conf.py  wsgi.py
server/config/: db.py  namespaces.py
server/namespaces/: __init__.py  main.py
server/namespaces/ingest/: __init__.py  controllers.py  models.py  routes.py
tests/: conftest.py
tests/fixtures/: ingest_fixtures.py
tests/functionaltests/: test_health.py  test_temperature_ingest.py
tests/unittests/: test_ingest.py
